🚀 添加demo源码展示

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/devalue": "^2.0.0",
     "@nuxt/kit": "npm:@nuxt/kit-edge@latest",
     "@rollup/pluginutils": "^4.1.2",
+    "@types/prismjs": "^1.26.0",
     "@vitejs/plugin-vue": "^2.2.4",
     "defu": "^5.0.1",
     "destr": "^1.1.0",
@@ -24,6 +25,7 @@
     "nuxt3": "latest",
     "ohmyfetch": "^0.4.15",
     "pathe": "^0.2.0",
+    "prismjs": "^1.27.0",
     "std-env": "^3.0.1",
     "ufo": "^0.7.11",
     "unenv": "^0.4.3",
