--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "blog-service"]
-	path = blog-service
-	url = git@github.com:higuaifan/blog-service.git
+[submodule "wash-painting-ui"]
+	path = wash-painting-ui
+	url = git@github.com:janghood/wash-painting-ui
