--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue-bundle-renderer": "^0.3.5"
   },
   "dependencies": {
+    "@higuaifan/wash-painting-ui": "^0.1.11-beta.10",
     "highlight.js": "^11.5.1",
     "markdown-it": "^12.3.2",
     "pinia": "^2.0.13",
