--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "description": "水墨UI",
   "private": true,
   "scripts": {
-    "dev": "jh-api && nuxi dev",
+    "dev": "nuxi dev --port 8513",
     "build": "jh-api && nuxi build",
     "nuxt start": "node .output/server/index.mjs",
+    "build-start": "nuxt build && node .output/server/index.mjs",
     "jh-api": "jh-api"
   },
   "devDependencies": {
     "@antfu/utils": "^0.5.1",
+    "@higuaifan/rollup-plugin-fontmin": "^0.0.1",
     "@janghood/api-extractor": "^0.0.1-alpha.1",
     "@nuxt/design": "^0.1.5",
     "@nuxt/devalue": "^2.0.0",
@@ -19,16 +21,27 @@
     "@rollup/pluginutils": "^4.2.0",
     "@types/prismjs": "^1.26.0",
     "@vitejs/plugin-vue": "^2.3.1",
+    "@vue/reactivity": "^3.2.32",
+    "@vue/runtime-core": "^3.2.32",
+    "@vue/runtime-dom": "^3.2.32",
+    "@vue/server-renderer": "^3.2.32",
+    "@vue/shared": "^3.2.32",
     "defu": "^5.0.1",
     "destr": "^1.1.1",
     "gray-matter": "^4.0.3",
+    "h3": "^0.7.3",
+    "hookable": "^5.1.1",
     "nuxt3": "latest",
+    "ohash": "^0.1.0",
     "ohmyfetch": "^0.4.15",
     "pathe": "^0.2.0",
     "prismjs": "^1.27.0",
+    "radix3": "^0.1.1",
+    "scule": "^0.2.1",
     "std-env": "^3.0.1",
     "ufo": "^0.7.11",
     "unenv": "^0.4.6",
+    "unstorage": "^0.3.3",
     "vite-plugin-md": "^0.11.9",
     "vue-bundle-renderer": "^0.3.5"
   },
@@ -39,6 +52,6 @@
     "pinia": "^2.0.13",
     "sass": "^1.50.0",
     "vite": "^2.9.1",
-    "vue": "^3.2.31"
+    "vue": "^3.2.32"
   }
 }
