--- a/package.json
+++ b/package.json
@@ -14,44 +14,24 @@
   "devDependencies": {
     "@antfu/utils": "^0.5.1",
     "@higuaifan/rollup-plugin-fontmin": "^0.0.1",
-    "@janghood/api-extractor": "^0.0.1-alpha.1",
-    "@nuxt/design": "^0.1.5",
-    "@nuxt/devalue": "^2.0.0",
+    "@janghood/api-extractor": "^0.0.1-alpha.2",
     "@nuxt/kit": "npm:@nuxt/kit-edge@latest",
-    "@rollup/pluginutils": "^4.2.0",
+    "@popperjs/core": "^2.11.5",
+    "@rollup/pluginutils": "^4.2.1",
     "@types/prismjs": "^1.26.0",
     "@vitejs/plugin-vue": "^2.3.1",
-    "@vue/reactivity": "^3.2.32",
-    "@vue/runtime-core": "^3.2.32",
-    "@vue/runtime-dom": "^3.2.32",
-    "@vue/server-renderer": "^3.2.32",
-    "@vue/shared": "^3.2.32",
-    "defu": "^5.0.1",
-    "destr": "^1.1.1",
     "gray-matter": "^4.0.3",
-    "h3": "^0.7.3",
-    "hookable": "^5.1.1",
-    "nuxt3": "latest",
-    "ohash": "^0.1.0",
-    "ohmyfetch": "^0.4.15",
-    "pathe": "^0.2.0",
-    "prismjs": "^1.27.0",
-    "radix3": "^0.1.1",
-    "scule": "^0.2.1",
-    "std-env": "^3.0.1",
-    "ufo": "^0.7.11",
-    "unenv": "^0.4.6",
-    "unstorage": "^0.3.3",
-    "vite-plugin-md": "^0.11.9",
-    "vue-bundle-renderer": "^0.3.5"
+    "nuxt": "^3.0.0-rc.1",
+    "prismjs": "^1.28.0",
+    "ufo": "^0.8.3",
+    "vite-plugin-md": "^0.11.9"
   },
   "dependencies": {
-    "@higuaifan/wash-painting-ui": "^0.1.11-beta.10",
-    "highlight.js": "^11.5.1",
+    "@higuaifan/wash-painting-ui": "^0.1.12",
     "markdown-it": "^12.3.2",
     "pinia": "^2.0.13",
     "sass": "^1.50.0",
-    "vite": "^2.9.1",
-    "vue": "^3.2.32"
+    "vite": "^2.9.5",
+    "vue": "^3.2.33"
   }
 }
