--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gray-matter": "^4.0.3",
     "nuxt": "^3.0.0-rc.2",
     "prismjs": "^1.28.0",
+    "typescript": "^4.6.4",
     "ufo": "^0.8.3",
     "vite-plugin-md": "^0.11.9"
   },
