--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "vite-plugin-md": "^0.11.9"
   },
   "dependencies": {
-    "@higuaifan/wash-painting-ui": "^0.1.13",
     "markdown-it": "^12.3.2",
     "pinia": "^2.0.13",
     "sass": "^1.50.0",
+    "shuimo-ui": "^0.2.1",
     "vite": "^2.9.5",
     "vue": "^3.2.33"
   }
