--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "prismjs": "^1.28.0",
     "typescript": "^4.6.4",
     "ufo": "^0.8.3",
-    "vite-plugin-md": "^0.11.9"
+    "vite-plugin-md": "^0.11.9",
+    "vue-router": "^4.1.2"
   },
   "dependencies": {
     "markdown-it": "^12.3.2",
