--- a/package.json
+++ b/package.json
@@ -1,38 +1,28 @@
 {
   "name": "wash-painting-doc",
   "author": "阿怪",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "水墨UI",
   "private": true,
   "scripts": {
-    "dev": "nuxi dev --port 8513",
-    "build": "jh-api && nuxi build",
-    "nuxt start": "node .output/server/index.mjs",
-    "build-start": "nuxt build && node .output/server/index.mjs",
+    "dev": "nuxt dev --port 8513",
+    "build": "jh-api && nuxt build",
+    "build:start": "nuxt build && node .output/server/index.mjs",
     "jh-api": "jh-api"
   },
+  "workspaces": [
+    "modules/markdownLib"
+  ],
   "devDependencies": {
-    "@antfu/utils": "^0.5.2",
     "@higuaifan/rollup-plugin-fontmin": "^0.0.3",
-    "@janghood/api-extractor": "^0.0.1-alpha.6",
-    "@nuxt/kit": "npm:@nuxt/kit-edge@latest",
-    "@popperjs/core": "^2.11.5",
-    "@rollup/pluginutils": "^4.2.1",
-    "@types/prismjs": "^1.26.0",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "gray-matter": "^4.0.3",
-    "nuxt": "^3.0.0-rc.6",
-    "prismjs": "^1.28.0",
+    "@janghood/api-extractor": "0.0.1-alpha.6",
+    "nuxt": "3.0.0-rc.8",
+    "sass": "^1.54.4",
     "typescript": "^4.7.4",
-    "ufo": "^0.8.5",
-    "vite-plugin-md": "^0.11.9",
-    "vue-router": "^4.1.3"
+    "vue": "^3.2.37"
   },
   "dependencies": {
-    "markdown-it": "^12.3.2",
-    "sass": "^1.54.0",
-    "shuimo-ui": "^0.2.4",
-    "vite": "^2.9.14",
-    "vue": "^3.2.37"
+    "prismjs": "^1.28.0",
+    "shuimo-ui": "^0.2.4"
   }
 }
