--- a/script/fontmin/package.json
+++ b/script/fontmin/package.json
@@ -6,6 +6,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.8.3",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
